--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,19 @@
     <title>BMI</title>
 </head>
 <body>
-    <p class = "para">This is the index page</p>
+    <h1>BMI Index Calculator</h1> 
+
+    <div>
+        <form class = "forum" action="/predict" method="post">
+            <label for="ht">Height</label>
+            <input type="text" id="ht" name = "height" placeholder="Enter your height"><br>
+            <label for="wt">Weight</label>
+            <input type="text" name = "weight" id="wt" placeholder="Enter your Weight"><br>
+            <input type="submit" name="submit" id="submit_btn"><br>
+        </form>
+    </div>
+    
+    
 </body>
+<footer>Created by copyright@ShyamGoli</footer>
 </html>
