--- a/templates/predict.html
+++ b/templates/predict.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/result.css">
-    <title>BMI Result</title>
+    <title>Document</title>
 </head>
 <body>
-    <P class = "para">This is the result page</P>
+    <p>This ths predict</p>
+    <p>Prediction is below</p>
     {{ show }}
+    <img src="../images/download.jpg" alt="image">
 </body>
 </html>
